create-direct message , send message as a user

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,6 @@
 @import "./properties";
 body{
-  background-color: $background-white;
+  background-color: $background-gray;
   font-family: $font;
   font-size: 16px;
   margin: 0;
