--- a/src/styles/cardMenu.scss
+++ b/src/styles/cardMenu.scss
@@ -1,1 +1,15 @@
 @import "./properties";
+.cardMenu{
+  display: flex;
+  align-items: center;
+  padding: 12px;
+  .icon{
+    margin-right: 1.5em;
+    width: 23px;
+    height: 23px;
+    cursor: pointer;
+    &.liked{
+      fill:$font-color-primary;
+    }
+  }
+}
