--- a/src/styles/DirectUsers.scss
+++ b/src/styles/DirectUsers.scss
@@ -12,6 +12,7 @@
     display: flex;
     align-items: center;
     padding: 20px 15px 15px 15px;
+    color: #000;
     &.active {
       background-color: #f8f9f9;
     }
