--- a/src/styles/DirectChat.scss
+++ b/src/styles/DirectChat.scss
@@ -3,6 +3,34 @@
   width: 60%;
   height: 100%;
   position: relative;
+  .initialDirect {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 23px;
+    svg{
+      width: 55px;
+      height: 55px;
+    }
+    p{
+      margin: 0;
+    }
+    span{
+      font-size: 0.9rem;
+    }
+    .init-send {
+      background-color: #0095f6;
+      border: none;
+      padding: 7px;
+      border-radius: 3px;
+      color: #fff;
+      font-size: 0.8rem;
+    }
+  }
   .DirectChatMessage {
     padding: 20px;
     height: calc(100% - 32vh);
