--- a/src/styles/DirectUsers.scss
+++ b/src/styles/DirectUsers.scss
@@ -13,8 +13,25 @@
     align-items: center;
     padding: 20px 15px 15px 15px;
     color: #000;
+    position: relative;
     &.active {
       background-color: #f8f9f9;
+    }
+    .textContainer{
+      .accountName{
+        a{
+          position: absolute;
+          background-color: transparent;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          top: 0;
+          display: flex;
+          align-items: center;
+          padding-left: 80px;
+          box-sizing: border-box;
+        }
+      }
     }
     img{
       width: 60px;
